made views design changes * turn each list view into table * made visual consistency throughout each list * catalog view has been also addressed

--- a/inventory-app/views/album-detail.ejs
+++ b/inventory-app/views/album-detail.ejs
@@ -8,18 +8,40 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
-                <h1 class="text-primary"><%= title %> Of <%= album.name %></h1>
-                <div class="card text-center">
-                    <h2 class="text-info" class="card-title text-danger">Title: <%= album.name %></h2>
-                    <div class="card-body">
-                        <h2 class="text-info">Artist: <span class="text-danger"><%= album.artistName %></span></h2>
-                        <h2 class="text-info">Genre: <span class="text-danger"><%= album.album_genre %></span></h2>
-                        <h2 class="text-info">Released: <span class="text-danger"><%= album.released_date_format %></span></h2>
-                        <h2 class="text-info">Description: </h2>
-                        <p class="card-text text-primary"><%= album.description %></p>
-                        <h2 class="text-info">Price: <span class="text-danger"><%= album.price %></span></h2>
-                    </div>
-                </div>
+                <table class="table table-dark table-hover">
+                    <thead>
+                        <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %> Of <%= album.name %></h1>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Album Name</th>
+                            <td class="bg-info"><%= album.name %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Artist Name</th>
+                            <td class="bg-info"><%= album.artistName %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Genre Name</th>
+                            <td class="bg-info"><%= album.album_genre %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Released Date</th>
+                            <td class="bg-info"><%= album.released_date_format %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Album Description</th>
+                            <td class="bg-info"><%= album.description %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Retail Price</th>
+                            <td class="bg-info"><%= album.price %></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <hr>
+                <hr>
+                
             </div>
         </div>
     </div>
