--- a/inventory-app/views/artist_detail.ejs
+++ b/inventory-app/views/artist_detail.ejs
@@ -8,18 +8,33 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-5">
-                <h1 class="text-info border border-primary mt-2 pt-2 pb-2 text-center">Detail About Artist: <%= artist.full_name %> </h1>
+                <table class="table table-dark table-hover">
+                    <caption>Artist Information Details</caption>
+                    <thead>
+                        <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center">Detail About Artist: <%= artist.full_name %> </h1>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Artist Name</th>
+                            <td class="bg-info"><%= artist.full_name %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Albums Count</th>
+                            <td class="bg-info"><%= artist_albums?.length %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Date Of Birth</th>
+                            <td class="bg-info"><%= artist.dob_format %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Date Of Death</th>
+                            <td class="bg-info"><%= artist.dod_format %></td>
+                        </tr>
+                    </tbody>
+                </table>
                 <hr>
                 <hr>
-                <div class="card text-center">
-                    <h2 class="text-info row"><span class="col">Artist Name: </span> <span class="col text-danger"><%= artist.full_name %></span></h2>
-                    <h2 class="text-info row"><span class="col">Artist Albums: </span> <span class="col text-danger"><%= artist_albums?.length %></span></h2>
-                    <h2 class="text-info row"><span class="col">Date Of Birth:</span> <span class="col text-danger"><%= artist.dob_format %></span></h2>
-                    <h2 class="text-info row"><span class="col">Date Of Death:</span><span class="col text-danger"><%= artist.dod_format %></span></h2>
-                </div>
-                <hr>
-                <hr>
-                <h3 class="text-info">Albums List: </h3>
+                <h3 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center">Albums List: </h3>
                 <ul class="nav nav-pills nav-fill">
                     <% if(artist_albums?.length) { %>
                         <% artist_albums?.forEach(album => { %>
