--- a/inventory-app/views/genre_detail.ejs
+++ b/inventory-app/views/genre_detail.ejs
@@ -8,17 +8,25 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-5">
-                <h1 class="text-info border border-primary mt-2 pt-2 pb-2 text-center">Detail About <%= title %> Genre</h1>
+                <table class="table table-dark table-hover">
+                    <caption>Informations about Genre details</caption>
+                    <thead>
+                        <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center">Detail About <%= title %> Genre</h1>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Genre Name</th>
+                            <td class="bg-info"><%= title %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Album Count</th>
+                            <td class="bg-info"><%= genre_albums?.length %></td>
+                        </tr>
+                    </tbody>
+                </table>
                 <hr>
                 <hr>
-                <div class="card text-center border-primary">
-                    <h2 class="text-info row"><span class="col">Genre Name: </span><span class="col text-danger"><%= title %></span></h2>
-                    <h2 class="text-info row"><span class="col">Album Count: </span><span class="col text-danger"><%= genre_albums?.length %> </span></h3>
-                </div>
-
-                <hr>
-                <hr>
-                <h3 class="text-info">Albums List: </h3>
+                <h3 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center">Albums List: </h3>
                 <ul class="nav nav-pills nav-fill">
                     <% if(genre_albums?.length) { %>
                         <% genre_albums?.forEach(item => { %>
