--- a/inventory-app/views/track_detail.ejs
+++ b/inventory-app/views/track_detail.ejs
@@ -8,12 +8,26 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
-                <h1 class="text-info border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
-                <div class="card text-center">
-                    <h2 class="text-info row"><span class="col">Track Name: </span> <span class="col text-danger"><%= track.name %></span></h2>
-                    <h2 class="text-info row"><span class="col">Album Name: </span> <span class="col text-danger"><a href=<%= "/catalog/album/"+track.album._id %>><%= track.album.name %></a></span></h2>
-                    <h2 class="text-info row"><span class="col">Genre Name: </span> <span class="col text-danger"><a href=<%= "/catalog/genre/"+track.genre._id %>><%= track.genre.name %></a></span></h2>
-                </div>
+                <table class="table bordered table-hover table-dark">
+                    <caption><%= title %></caption>
+                    <thead>
+                        <h1 class="rounded bg-success text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Track Name</th>
+                            <td class="bg-info"><%= track.name %></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Album Name</th>
+                            <td class="bg-info"><a class="text-white" href=<%= "/catalog/album/"+track.album._id %>><%= track.album.name %></a></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Genre Name</th>
+                            <td class="bg-info"><a class="text-white" href=<%= "/catalog/genre/"+track.genre._id %>><%= track.genre.name %></a></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
