--- a/inventory-app/views/all-tracks.ejs
+++ b/inventory-app/views/all-tracks.ejs
@@ -7,8 +7,8 @@
             <div class="col-sm-2">
                 <%- include("./partials/nav.ejs") %>
             </div>
-            <div class="col-md-4">
-                <h1 class="text-primary"><%= title %></h1>
+            <div class="col-md-6">
+                <h1 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <table class="table table-borderd text-center table-hover table-dark">
                     <caption>List of all tracks</caption>
                     <thead>
@@ -20,7 +20,7 @@
                     <tbody>
                         <% tracks?.forEach(track => { %>
                             <tr>
-                                <td ><a class="text-white" href=<%= track.url %>><%= track.name %></a></td>
+                                <td ><a class="text-white btn btn-sm" href=<%= track.url %>><%= track.name %></a></td>
                                 <td class="bg-secondary"><a class="text-white" href=<%= track.album_url %>><%= track.album_name %></a></td>
                             </tr>
                         <% }) %>
