--- a/inventory-app/views/all-albums.ejs
+++ b/inventory-app/views/all-albums.ejs
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include("./partials/head.ejs") %>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-2">
-                <%- include("./partials/nav.ejs") %>
-            </div>
-            <div class="col-md-6">
-                <h1><%= title %></h1>
-                <table class="table table-borderd text-center table-hover table-dark">
-                    <caption>List of all albums</caption>
-                    <thead>
-                        <tr>
-                            <th class="bg-info text-white" scope="col">Album Name</th>
-                            <th class="bg-info text-white" scope="col">Artist Name</th>
-                            <th class="bg-info text-white" scope="col">Album Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% results?.forEach(item => { %>
+<%- include("./partials/head.ejs") %>
+
+    <body>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-2">
+                    <%- include("./partials/nav.ejs") %>
+                </div>
+                <div class="col-md-6">
+                    <h1 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center">
+                        <%= title %>
+                    </h1>
+                    <table class="table table-borderd text-center table-hover table-dark">
+                        <caption>List of all albums</caption>
+                        <thead>
                             <tr>
-                                <td><a href=<%= item.url %>><span class="text-danger"><%= item.name %></span></a></td>
-                                <td class="bg-secondary text-white"><span><%= item.artistName %></span></td>
-                                <td class="bg-secondary text-white"><span><%= item.price %></span></td>
+                                <th class="bg-info text-white" scope="col">Album Name</th>
+                                <th class="bg-info text-white" scope="col">Artist Name</th>
+                                <th class="bg-info text-white" scope="col">Album Price</th>
                             </tr>
-                        <% }) %>
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            <% results?.forEach(item=> { %>
+                                <tr>
+                                    <td><a class="btn btn-sm" href=<%=item.url %>><span class="text-white">
+                                                <%= item.name %>
+                                            </span></a></td>
+                                    <td class="bg-secondary text-white"><span>
+                                            <%= item.artistName %>
+                                        </span></td>
+                                    <td class="bg-secondary text-white"><span>
+                                            <%= item.price %>
+                                        </span></td>
+                                </tr>
+                                <% }) %>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-</body>
+        </div>
+    </body>
+
 </html>
