--- a/inventory-app/views/all-genres.ejs
+++ b/inventory-app/views/all-genres.ejs
@@ -8,7 +8,7 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-md-6">
-                <h1 class="text-primary"><%= title %></h1>
+                <h1 class="rounded bg-secondary text-white border border-primary mt-2 pt-2 pb-2 text-center"><%= title %></h1>
                 <table class="table text-center table-hover table-dark">
                     <caption>List of all genres</caption>
                     <thead>
@@ -20,7 +20,7 @@
                     <tbody>
                         <% genres?.forEach(genre => { %>
                             <tr>
-                                <td><a class="text-danger" href=<%= genre.url %> ><%= genre.name %></a></td>
+                                <td><a class="text-white btn btn-sm" href=<%= genre.url %> ><%= genre.name %></a></td>
                                 <% for(let key in genres_albums) { %>
                                     <% if(key == genre.name) { %>
                                         <td class="bg-secondary text-white"><%= genres_albums[key] %></td>
