--- a/inventory-app/views/partials/nav.ejs
+++ b/inventory-app/views/partials/nav.ejs
@@ -1,7 +1,7 @@
-<ul class="sidebar-nav list-group">
-    <li class="list-group-item"><a href="/catalog">Home</a></li>
-    <li class="list-group-item"><a href="/catalog/albums">Albums</a></li>
-    <li class="list-group-item"><a href="/catalog/genres">Genres</a></li>
-    <li class="list-group-item"><a href="/catalog/artists">Artists</a></li>
-    <li class="list-group-item"><a href="/catalog/tracks">All Tracks</a></li>
+<ul class="nav flex-column nav-pills pt-1 pb-2">
+    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog">Home</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/albums">Albums</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/genres">Genres</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/artists">Artists</a></li>
+    <li class="nav-link m-1 btn bg-secondary list-group-item"><a class="btn btn-md text-white" href="/catalog/tracks">All Tracks</a></li>
 </ul>
