--- a/inventory-app/views/artist_detail.ejs
+++ b/inventory-app/views/artist_detail.ejs
@@ -46,6 +46,10 @@
                 </ul>
                 <hr>
                 <hr>
+                <nav class="nav nav-pills row nav-fills">
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= artist.url+"/update" %>>Upload</a>
+                    <a class="col nav-item btn btn-lg btn-danger" href=<%= artist.url+"/delete" %>>Delete</a>
+                </nav>
             </div>
         </div>
     </div>
