--- a/inventory-app/views/all-albums.ejs
+++ b/inventory-app/views/all-albums.ejs
@@ -37,6 +37,11 @@
                                 <% }) %>
                         </tbody>
                     </table>
+                    <hr>
+                    <hr>
+                    <nav class="nav nav-pills row nav-fills">
+                        <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/album/create" %>>Create Album</a>
+                    </nav>
                 </div>
             </div>
         </div>
