--- a/inventory-app/views/all-artists.ejs
+++ b/inventory-app/views/all-artists.ejs
@@ -34,6 +34,11 @@
                         <% }) %>
                     </tbody>
                 </table>
+                <hr>
+                <hr>
+                <nav class="nav nav-pills row nav-fills">
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/artist/create" %>>Create Artist</a>
+                </nav>
             </div>
         </div>
     </div>
