--- a/inventory-app/views/all-genres.ejs
+++ b/inventory-app/views/all-genres.ejs
@@ -30,6 +30,11 @@
                         <% }) %>
                     </tbody>
                 </table>
+                <hr>
+                <hr>
+                <nav class="nav nav-pills row nav-fills">
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/genre/create" %>>Create Genre</a>
+                </nav>
             </div>
         </div>
     </div>
