--- a/inventory-app/views/all-tracks.ejs
+++ b/inventory-app/views/all-tracks.ejs
@@ -26,6 +26,11 @@
                         <% }) %>
                     </tbody>
                 </table>
+                <hr>
+                <hr>
+                <nav class="nav nav-pills row nav-fills">
+                    <a class="col nav-item btn btn-lg btn-info" href=<%= "/catalog/track/create" %>>Create Create</a>
+                </nav>
             </div>
         </div>
     </div>
