--- a/inventory-app/views/form_artist_detail.ejs
+++ b/inventory-app/views/form_artist_detail.ejs
@@ -8,14 +8,15 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
+                <h1><%= title %></h1>
                 <form action="" method="post">
                     <fieldset>
                         <label for="first_name">First Name</label>
-                        <input type="text" id="first_name" name="first_name">
+                        <input type="text" id="first_name" name="first_name" placeholder="First Name">
                     </fieldset>
                     <fieldset>
                         <label for="first_name">Last Name</label>
-                        <input type="text" id="last_name" name="last_name">
+                        <input type="text" id="last_name" name="last_name" placeholder="Last Name">
                     </fieldset>
                     <fieldset>
                         <label for="d_o_b">Date Of Birth</label>
