--- a/inventory-app/views/form_genre_detail.ejs
+++ b/inventory-app/views/form_genre_detail.ejs
@@ -8,10 +8,11 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
+                <h1><%= title %></h1>
                 <form action="" method="post">
                     <fieldset>
                         <label for="name">Genre Name</label>
-                        <input type="text" id="name" name="name">
+                        <input type="text" id="name" name="name" placeholder="Genre Name Goes Here....">
                     </fieldset>
                     <button type="submit">Submit</button>
                 </form>
