--- a/inventory-app/views/form_track_detail.ejs
+++ b/inventory-app/views/form_track_detail.ejs
@@ -8,14 +8,20 @@
                 <%- include("./partials/nav.ejs") %>
             </div>
             <div class="col-sm-4">
+                <h1><%= title %></h1>
                 <form action="" method="post">
                     <fieldset>
                         <label for="name">Track Name</label>
-                        <input type="text" id="name" name="name">
+                        <input type="text" id="name" name="name" placeholder="Track Name Goes Here....">
                     </fieldset>
                     <fieldset>
                         <label for="status">Track Status</label>
-                        <input type="text" id="status" name="status">
+                        <select name="status" id="status">
+                            <option value="Free">Free</option>
+                            <option value="Preview">Preview</option>
+                            <option value="Play">Play</option>
+                            <option value="Download">Download</option>
+                        </select>
                     </fieldset>
                     <button type="submit">Submit</button>
                 </form>
