genre create GET and Post requests handled
also tweaked all genres for acute view on render
addressed genre controller to make sure that happens from genre_list

--- a/inventory-app/views/all-genres.ejs
+++ b/inventory-app/views/all-genres.ejs
@@ -22,7 +22,7 @@
                             <tr>
                                 <td><a class="text-white btn btn-sm" href=<%= genre.url %> ><%= genre.name %></a></td>
                                 <% for(let key in genres_albums) { %>
-                                    <% if(key == genre.name) { %>
+                                    <% if(key == genre.name && genres_albums[key] !== undefined) { %>
                                         <td class="bg-secondary text-white"><%= genres_albums[key] %></td>
                                     <% } %>
                                 <% } %>
