--- a/inventory-app/views/form_genre_detail.ejs
+++ b/inventory-app/views/form_genre_detail.ejs
@@ -12,10 +12,20 @@
                 <form action="" method="post">
                     <fieldset>
                         <label for="name">Genre Name</label>
-                        <input type="text" id="name" name="name" placeholder="Genre Name Goes Here....">
+                        <input 
+                            type="text" id="name" name="name" placeholder="Genre Name Goes Here...."
+                            value=<%= genre?.name %>
+                        >
                     </fieldset>
                     <button type="submit">Submit</button>
                 </form>
+                <hr>
+                <hr>
+                <ul>
+                    <% errors?.forEach(error => { %>
+                        <li><%= error.msg %> </li>
+                    <% }) %>
+                </ul>
             </div>
         </div>
     </div>
