--- a/inventory-app/views/form_album_detail.ejs
+++ b/inventory-app/views/form_album_detail.ejs
@@ -27,7 +27,8 @@
                         <% artists.sort((a,b) => (a.first_name.toUpperCase() < b.first_name.toUpperCase()) ? -1 : (a.first_name.toUpperCase() > b.first_name.toUpperCase> b.first_name.toUpperCase()) ? 1 : 0) %> 
                         <% artists?.forEach(artist => { %>
                             <option 
-                                value=<%= artist._id %> 
+                                value=<%= artist._id %>
+                                <%= artist.selected ? "selected" : null %>
                             ><%= artist.full_name %></option>
                         <% }) %>
                         </select>
